crates/ruff_linter/src/rules/flake8_pyi/snapshots/ruff_linter__rules__flake8_pyi__tests__PYI002_PYI002.pyi.snap
---
source: crates/ruff_linter/src/rules/flake8_pyi/mod.rs
---
PYI002.pyi:3:4: PYI002 (complex-if-statement-in-stub) `if` test must be a simple comparison against `sys.platform` or `sys.version_info`
  |
1 | import sys
2 |
3 | if sys.version == 'Python 2.7.10': ...  # Y002 If test must be a simple comparison against sys.platform or sys.version_info
  |    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ PYI002 (complex-if-statement-in-stub)
4 | if 'linux' == sys.platform: ...  # Y002 If test must be a simple comparison against sys.platform or sys.version_info
5 | if hasattr(sys, 'maxint'): ...  # Y002 If test must be a simple comparison against sys.platform or sys.version_info
  |

PYI002.pyi:4:4: PYI002 (complex-if-statement-in-stub) `if` test must be a simple comparison against `sys.platform` or `sys.version_info`
  |
3 | if sys.version == 'Python 2.7.10': ...  # Y002 If test must be a simple comparison against sys.platform or sys.version_info
4 | if 'linux' == sys.platform: ...  # Y002 If test must be a simple comparison against sys.platform or sys.version_info
  |    ^^^^^^^^^^^^^^^^^^^^^^^ PYI002 (complex-if-statement-in-stub)
5 | if hasattr(sys, 'maxint'): ...  # Y002 If test must be a simple comparison against sys.platform or sys.version_info
6 | if sys.maxsize == 42: ...  # Y002 If test must be a simple comparison against sys.platform or sys.version_info
  |

PYI002.pyi:5:4: PYI002 (complex-if-statement-in-stub) `if` test must be a simple comparison against `sys.platform` or `sys.version_info`
  |
3 | if sys.version == 'Python 2.7.10': ...  # Y002 If test must be a simple comparison against sys.platform or sys.version_info
4 | if 'linux' == sys.platform: ...  # Y002 If test must be a simple comparison against sys.platform or sys.version_info
5 | if hasattr(sys, 'maxint'): ...  # Y002 If test must be a simple comparison against sys.platform or sys.version_info
  |    ^^^^^^^^^^^^^^^^^^^^^^ PYI002 (complex-if-statement-in-stub)
6 | if sys.maxsize == 42: ...  # Y002 If test must be a simple comparison against sys.platform or sys.version_info
  |

PYI002.pyi:6:4: PYI002 (complex-if-statement-in-stub) `if` test must be a simple comparison against `sys.platform` or `sys.version_info`
  |
4 | if 'linux' == sys.platform: ...  # Y002 If test must be a simple comparison against sys.platform or sys.version_info
5 | if hasattr(sys, 'maxint'): ...  # Y002 If test must be a simple comparison against sys.platform or sys.version_info
6 | if sys.maxsize == 42: ...  # Y002 If test must be a simple comparison against sys.platform or sys.version_info
  |    ^^^^^^^^^^^^^^^^^ PYI002 (complex-if-statement-in-stub)
  |
