crates/ruff_linter/src/rules/flake8_pyi/snapshots/ruff_linter__rules__flake8_pyi__tests__PYI007_PYI007.pyi.snap
---
source: crates/ruff_linter/src/rules/flake8_pyi/mod.rs
---
PYI007.pyi:7:4: PYI007 (unrecognized-platform-check) Unrecognized `sys.platform` check
  |
5 | if sys.platform != "platform_name_2": ...  # OK
6 |
7 | if sys.platform in ["linux"]: ...  # Error: PYI007 Unrecognized sys.platform check
  |    ^^^^^^^^^^^^^^^^^^^^^^^^^ PYI007 (unrecognized-platform-check)
8 |
9 | if sys.platform > 3: ...  # Error: PYI007 Unrecognized sys.platform check
  |

PYI007.pyi:9:4: PYI007 (unrecognized-platform-check) Unrecognized `sys.platform` check
   |
 7 | if sys.platform in ["linux"]: ...  # Error: PYI007 Unrecognized sys.platform check
 8 |
 9 | if sys.platform > 3: ...  # Error: PYI007 Unrecognized sys.platform check
   |    ^^^^^^^^^^^^^^^^ PYI007 (unrecognized-platform-check)
10 |
11 | if sys.platform == 10.12: ...  # Error: PYI007 Unrecognized sys.platform check
   |

PYI007.pyi:11:4: PYI007 (unrecognized-platform-check) Unrecognized `sys.platform` check
   |
 9 | if sys.platform > 3: ...  # Error: PYI007 Unrecognized sys.platform check
10 |
11 | if sys.platform == 10.12: ...  # Error: PYI007 Unrecognized sys.platform check
   |    ^^^^^^^^^^^^^^^^^^^^^ PYI007 (unrecognized-platform-check)
   |
